src/components/navigation-bar/NavBar.css
.color-nav{
    background-color: rgb(0, 130, 100);
}

.title{
    font-size: 32px;
}

.user-icon i{
    padding: 5px;
    align-items: center;
    justify-content: center;
}

.dropdown-items{
    text-align: center;
    padding: 10px;
    font-size: 15px;
}

.dropdown-items i{
    padding: 5px;
}

.dropdown-toggle::after{
    display: none;
}

